--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   api-db:
-    build: ./api-db
+    build: ./
     container_name: api-db  
     ports:
       - "8000:8000"
